# django-unfold-extra

./: .gitignore  .sourcery.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: sync_cms_pagetree.py
tests/: conftest.py  test_djangocms_link.py  test_language_sync.py  test_package.py  test_smoke.py  test_ui_submit_row.py
tests/server/testapp/: admin.py  cms_plugins.py  models.py  settings.py  urls.py
tests/server/testapp/migrations/: 0001_initial.py  0002_heropluginmodel_herobutton.py  0003_pagelinkpluginmodel.py
tests/server/testapp/templates/: base.html
tests/server/testapp/templates/testapp/plugins/: hero.html  page_link.html
unfold_extra/: __init__.py  views.py
unfold_extra/contrib/cms/: admin.py  apps.py  forms.py  plugins.py  unfold_patches.py  utils.py  widgets.py
unfold_extra/contrib/cms/templates/admin/cms/page/: change_form.html
unfold_extra/contrib/cms/templates/admin/cms/page/plugin/: submit_line.html
unfold_extra/contrib/cms/templates/admin/cms/usersettings/: change_form.html
unfold_extra/contrib/cms/templates/admin/djangocms_versioning/: versioning_buttons.html
unfold_extra/contrib/cms/templates/admin/djangocms_versioning/page/: change_form.html
unfold_extra/contrib/cms/templates/unfold/helpers/: header_back_button.html
unfold_extra/contrib/cms/templates/unfold_extra/cms/page/tree/: base.html
unfold_extra/contrib/cms/templates/unfold_extra/cms/usersettings/: header.html
unfold_extra/contrib/cms/templates/unfold_extra/cms/widgets/: pageselectwidget.html
unfold_extra/contrib/djangocms_link/: apps.py  cms_plugins.py  widgets.py
unfold_extra/contrib/sites/: admin.py
unfold_extra/contrib/versatileimagefield/: admin.py  apps.py
unfold_extra/contrib/versatileimagefield/templates/versatileimagefield/forms/widgets/: versatile_image.html
unfold_extra/src/css/: unfold_extra.css
unfold_extra/src/js/: theme-sync.js
unfold_extra/static/unfold_extra/cms/css/: cms.pagetree.css  cms.pagetree.css.map
unfold_extra/static/unfold_extra/cms/fonts/: django-cms-iconfont.eot
unfold_extra/static/unfold_extra/cms/js/: pageselect_inline.js
unfold_extra/static/unfold_extra/css/: styles.css
unfold_extra/static/unfold_extra/js/: theme-sync.js  theme-sync.js.map
unfold_extra/templatetags/: unfold_extra_tags.py
