[project]
name = "django-unfold-extra"
description = "Unofficial extra for Django Unfold Admin. Supports django-parler and django-cms."
authors = [{ name = "Marc Widmer", email = "marc@koga.cx" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "django cms",
    "unfold",
    "admin",
    "tailwind",
    "theme",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Framework :: Django",
]
dependencies = [
    "django-cms>=5.0,<5.1",
    "django-parler~=2.3",
    "django-unfold>=0.92",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-env>=1.0",
]

[project.urls]
Homepage = "https://github.com/metaforx/django-unfold-extra"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-env>=1.0",
    "pytest-playwright>=0.7.2,<0.8",
    "djangocms-versioning>=2.5.1",
]
dev = ["ruff>=0.4"]

[tool.uv]
package = false
default-groups = "all"
# Uncomment and adjust the script below as needed:
# unfold-cms = "unfold_extra.cli:main"

[tool.hatch.build.hooks.custom]
path = "build_hook.py"

[tool.hatch.build.targets.sdist]
type = "sdist"
packages = ["unfold_extra"]

[tool.hatch.build.targets.wheel]
type = "wheel"
packages = ["unfold_extra"]

[tool.hatch.version]
path = "unfold_extra/__init__.py"

[tool.hatch.build]
exclude = [
    "unfold_extra/src/node_modules",
    "unfold_extra/src/node_modules/**/*",
    "unfold_extra/src/*.lock",
    "unfold_extra/src/package-lock.json",
    "**/*.map",
    "**/.DS_Store",
    "**/__pycache__",
    "docs/**/*"
,
]

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=testapp.settings
    -m 'not ui'
    """
testpaths = ["tests"]
pythonpath = ["tests/server"]
django_find_project = false
env = [
    "DJANGO_ALLOW_ASYNC_UNSAFE=true",
]
markers = [
    "ui: Playwright browser tests (deselected by default, run with: pytest -m ui)",
]

